this is the real update, not previous one

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <div class="ingredient">
       <img src="images/chicken.png" id="chicken" class="ingredient-img" alt="">
   </div>
-  <div class="ingredient">
+  <div class="ingredient"  protein="100">
       <img src="images/steak.png" id="steak" class="ingredient-img" alt="">
   </div>
-  <div class="ingredient">
+  <div class="ingredient" protein="110">
       <img src="images/lamb.png" id="lamb" class="ingredient-img" alt="">
   </div>
   </div>
   <div class="display-div">
     <img class="display-ingredient" src="" alt="">
   </div>
+  <button type="button" name="calculate-meal">Calculate Meal</button>
 
 
 
