--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div class="display-div">
     <img class="display-ingredient" src="" alt="">
   </div>
-  <button type="button" name="calculate-meal">Calculate Meal</button>
-
+  <button type="button" class="calculate-meal">Calculate Meal</button>
+<h1 class="meal-total"></h1>
 
 
 
