--- a/index.html
+++ b/index.html
@@ -3,17 +3,62 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
+
+      <link rel="stylesheet" href="styles.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
-  <body>
-<section class="selector-section container-fluid">
-  <div class="display-div rounded img-thumbnail col-sm-4">
+  <body class="bg-light">
+
+  <!-- Navbar -->
+  <section class="navbar-section">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav ms-auto hide-div">
+        <li class="nav-item active ms-5">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blog</a>
+        </li>
+      </ul>
+    </div>
+    <img class="navbar-brand mx-auto logo"src="images/Logo.PNG" alt="">
+
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto hide-div">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item ms-5">
+            <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+    </nav>
+  </section>
+
+  <div class="load-screen container-fluid hide-div">
+    <h1>Assemble Meal</h1>
+    <button type="button" class="load-button btn btn-success">Begin</button>
+  </div>
+
+<section class="selector-section container-fluid hide-div">
+
+
+    <!-- Display Div -->
+  <div class="display-div hide-div rounded img-thumbnail col-sm-4 end-10">
     <img class="display-ingredient" src="" alt="">
     <div class="card" style="width: 8rem;">
     <div class="card-body">
-      <h5 class="card-title"></h5>
+      <h6 class="card-title"></h5>
       <h6 class="card-subtitle mb-2 text-muted calories-card"></h6>
       <h6 class="card-subtitle mb-2 text-muted protein-card"></h6>
       <h6 class="card-subtitle mb-2 text-muted carbs-card"></h6>
@@ -123,20 +168,24 @@
         <img src="images/fried-tofu.png" id="fried-tofu" class="ingredient-img rounded" alt="">
         <div class="ingredient-layer"></div>
     </div>
+    <br>
+    <br>
+    <hr>
+    <h1 class="meal-total"></h1>
       <button type="button" class="show-meal btn btn-success">Calculate Meal</button>
 </div>
 
 </div class="">
-  <ul class="list-group col-4">
+  <ul class="list-group hide-div col-4">
   <li class="list-group-item list-protein"><b>Meal List</b></li>
 
 </ul>
-<h1 class="meal-total"></h1>
+
 
 </section>
 <section class="macro-section">
 
-<div class="chart-div">
+<div class="chart-div hide-div">
     <canvas id="myChart"></canvas>
 <button type="button" class="hide-meal btn btn-warning">Go Back</button>
 <button type="button" class="process-meal btn btn-success">Go To Payment</button>
