added animations, tweaked pricing, added sizes. functionality complete!

--- a/index.html
+++ b/index.html
@@ -63,113 +63,179 @@
       <h6 class="card-subtitle mb-2 text-muted price-card"></h6>
     </div>
   </div>
+</div>
 
+<div class="ingredient-div container-fluid">
+  <div class="size-div">
+    <h2>Meal Size</h2>
+    <hr>
+    <div class="ingredient size-button col-lg-1 col-md-3 col-sm-12">
+      <button type="button" name="button" class="btn" id="small">S (from £3.00)</button>
+    </div>
+    <div class="ingredient size-button col-lg-1 col-md-3 col-sm-12">
+      <button type="button" name="button" class="btn" id="medium">M (from £4.50)</button>
+    </div>
+    <div class="ingredient size-button col-lg-1 col-md-3 col-sm-12">
+      <button type="button" name="button" class="btn" id="large">L (from £6.00)</button>
+    </div>
+    <br>
+  </div>
+  <div class="carb-div">
+    <h2>Carbs</h2>
+    <hr>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 carb">
+      <button type="button" name="button" class="btn" id="egg-noodles">Egg Noodles</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 carb">
+      <button type="button" name="button" class="btn" id="vermicelli">Vermicelli</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 carb">
+      <button type="button" name="button" class="btn" id="glass-noodles">Glass Noodles</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-4 carb">
+      <button type="button" name="button" class="btn" id="brown-rice">Brown Rice</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-4 carb">
+      <button type="button" name="button" class="btn" id="white-rice">White Rice</button>
+  </div>
+  <br>
+  </div>
+  <!-- sauce -->
+  <div class="sauce-div">
+    <h2>Sauce</h2>
+    <hr>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 sauce">
+      <button type="button" name="button" class="btn" id="traditional">Normal</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 sauce">
+      <button type="button" name="button" class="btn" id="peanut-sauce">Peanut (£1.00)</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-12 sauce">
+      <button type="button" name="button" class="btn" id="spicy-sauce">Spicy (£1.00)</button>
+    </div>
+    <div class="ingredient col-lg-1 col-md-3 col-sm-4 sauce">
+      <button type="button" name="button" class="btn" id="curry-sauce">Curry (£1.00)</button>
+    </div>
+    <br>
+    <button type="button" onClick="window.location.href=window.location.href" class="start-over btn btn-warning">Go Back</button>
+  </div>
+  <div class="meat-div">
+    <h2>Meat</h2>
+    <hr>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-12">
+            <img src="images/chicken.png" id="chicken" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-12">
+            <img src="images/steak.png" id="steak" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-12">
+            <img src="images/lamb.png" id="lamb" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/bacon.png" id="bacon" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/ham.png" id="ham" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/meatballs.png" id="meatballs" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/mince.png" id="mince" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/pork-belly.png" id="pork-belly" class="ingredient-img rounded" alt="">
+        </div>
+        <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+            <img src="images/sausages.png" id="sausages" class="ingredient-img rounded" alt="">
+        </div>
+  </div>
+<div class="filling-div">
+  <h3>Now choose from 5 healthy ingredients..</h3>
+  <hr>
+      <h2>Vegetables & Co.</h2>
+      <hr>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/baby-corn.png" id="baby-corn" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/bell-peppers.png" id="bell-peppers" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/broccoli.png" id="broccoli" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/carrots.png" id="carrots" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/chillis.png" id="chillis" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/corn.png" id="corn" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/kidney-beans.png" id="kidney-beans" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/mushrooms.png" id="mushrooms" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/peas.png" id="peas" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/spring-beans.png" id="spring-beans" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <h2>Extra Toppings</h2>
+      <hr>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/cashews.png" id="cashews" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/green-onion.png" id="green-onion" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/peanuts.png" id="peanuts" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/sesame-seeds.png" id="sesame-seeds" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/tofu.png" id="tofu" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <div class="ingredient col-lg-1 col-md-3 col-sm-4">
+          <img src="images/fried-tofu.png" id="fried-tofu" class="ingredient-img rounded" alt="">
+          <div class="ingredient-layer"></div>
+      </div>
+      <br>
+      <hr>
+      <br>
 
-
+      <br>
+      <br>
+      <hr>
+      <h3 class="meal-cap"></h3>
+      <div class="button-div">
+        <button type="button" onClick="window.location.href=window.location.href" class="start-over btn btn-danger">Start Over</button>
+          <button type="button" class="show-meal meal-cap btn btn-success">Calculate Meal</button>
+      </div>
 
 </div>
-  <div class="ingredient-div container-fluid">
-<h2>Meat</h2>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-12">
-        <img src="images/chicken.png" id="chicken" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-12">
-        <img src="images/steak.png" id="steak" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-12">
-        <img src="images/lamb.png" id="lamb" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/bacon.png" id="bacon" class="ingredient-img rounded" alt="">
-    </div>
 
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/ham.png" id="ham" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/meatballs.png" id="meatballs" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/mince.png" id="mince" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/pork-belly.png" id="pork-belly" class="ingredient-img rounded" alt="">
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/sausages.png" id="sausages" class="ingredient-img rounded" alt="">
-    </div>
-    <h2>Vegetables & Co.</h2>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/baby-corn.png" id="baby-corn" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/bell-peppers.png" id="bell-peppers" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/broccoli.png" id="broccoli" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/carrots.png" id="carrots" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/chillis.png" id="chillis" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/corn.png" id="corn" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/kidney-beans.png" id="kidney-beans" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/mushrooms.png" id="mushrooms" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/peas.png" id="peas" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/spring-beans.png" id="spring-beans" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-
-    <h2>Extra Toppings</h2>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/cashews.png" id="cashews" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/green-onion.png" id="green-onion" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/peanuts.png" id="peanuts" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/sesame-seeds.png" id="sesame-seeds" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/tofu.png" id="tofu" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <div class="ingredient col-lg-1 col-md-3 col-sm-4">
-        <img src="images/fried-tofu.png" id="fried-tofu" class="ingredient-img rounded" alt="">
-        <div class="ingredient-layer"></div>
-    </div>
-    <br>
-    <br>
-    <hr>
-    <h1 class="meal-total"></h1>
-      <button type="button" class="show-meal btn btn-success">Calculate Meal</button>
 </div>
 
 </div class="">
@@ -184,9 +250,12 @@
 
 <div class="chart-div hide-div">
     <canvas id="myChart"></canvas>
-<button type="button" class="hide-meal btn btn-warning">Go Back</button>
-<button type="button" class="process-meal btn btn-success">Go To Payment</button>
+    <br>
+    <hr>
+  <button type="button" onClick="window.location.href=window.location.href" class="start-over btn btn-danger">Start Over</button>
+  <button type="button" class="process-meal btn btn-success">Go To Payment</button>
 </div>
+
 
 
 </section>
